# gravity-mocap

./: .gitignore  AGENTS.md  CLEANROOM.md  LICENSE  LICENSE_AUDIT.md  README.md  pyproject.toml
configs/: datasets.yaml  train-paper.yaml  train-residual-small.yaml  train-residual-v8.yaml  train-small.yaml  train-smoke.yaml
docs/: model-capacity.md  training.md
docs/assets/: README.md
scripts/: build_quaternius_avatar.py  mlflow-ui.sh  mocap.sh  setup-video.sh  setup.sh  start-fresh-training.sh  train-residual-canary.sh  train-residual-small.sh  train-small.sh  train-v2-canary.sh  train-v8-canary.sh  train-v8.sh  train.sh  video.sh
src/gravity_mocap/: __init__.py  _blender_avatar.py  adapters.py  artifacts.py  avatar.py  baseline.py  catalog.py  checkpoint.py  cli.py  comparison.py  data.py  detector.py  detector_loop.py  download.py  evaluation.py  fixture.py  inference.py  losses.py  mesh_avatar.py  metrics.py  model.py  pose.py  preprocess.py  projection.py  rig2d.py  rotations.py  schema.py  skeleton.py  tracking.py  trainer.py  video.py  vision.py  world3d.py
src/gravity_mocap/assets/: quaternius_gray_man.LICENSE.txt  quaternius_gray_man.glb  quaternius_gray_man.provenance.json
tests/: test_avatar.py  test_catalog.py  test_checkpoint.py  test_comparison.py  test_detector_loop.py  test_download.py  test_evaluation.py  test_inference.py  test_mesh_avatar.py  test_model.py  test_pose.py  test_preprocess.py  test_rig2d.py  test_schema_data.py  test_scripts.py  test_tracking.py  test_video.py  test_world3d.py
