[project]
name = "gravity-mocap"
version = "0.1.0"
description = "Clean-room world-grounded monocular motion recovery research pipeline"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.18.0,<2.0",
  "gdown>=5.2.0",
  "huggingface-hub>=0.34.0",
  "mlflow-skinny>=3.14.0,<4.0",
  "nimblephysics>=0.10.52.1",
  "numpy>=2.0.0",
  "pillow>=11.0.0",
  "pyyaml>=6.0.2",
  "remotezip>=0.12.3",
  "requests>=2.32.0",
  "sqlalchemy>=2.0.0,<3.0",
  "torch>=2.5.0",
]

[project.optional-dependencies]
video = [
  "mediapipe==0.10.35",
  "opencv-contrib-python>=4.10.0,<5.0",
]

[project.urls]
Repository = "https://github.com/defudef/gravity-mocap"
Paper = "https://arxiv.org/abs/2409.06662"

[project.scripts]
gravity-mocap = "gravity_mocap.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gravity_mocap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
